[SITE] Interface adjusts
by [Dara Keon (desktop)] in [2015-04-28 07:24:55 (-03:00)]

--- a/Presentation/Assets/css/Author/screen_Form.css
+++ b/Presentation/Assets/css/Author/screen_Form.css
@@ -46,9 +46,9 @@
     height: 35px;
 }
 
-.main a.save
+.main button.save
 {
-    padding: 6px 5px 4px 5px;
+    padding: 4px 5px 34px 5px;
 }
 
 .main .scene button
