--- a/Presentation/Views/Shared/_Layout.cshtml
+++ b/Presentation/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         </div>
 
         <div class="left">
-            <div class="head">
+            <div class="head" onclick="location.href = '/';">
             </div>
 
             <div class="menu">
