--- a/Site/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Js.cshtml
@@ -20,5 +20,6 @@
 <script src="@Url.Content("~/Assets/js/Menu.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/SceneChanger.js")" type="text/javascript"></script>
 <script src="@Url.Content("~/Assets/js/FontResizer.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Trigger.js")" type="text/javascript"></script>
 
 <script src="@Url.Content("~/Assets/js/General.js")" type="text/javascript"></script>
