--- a/Site/Presentation/Assets/css/screen_Back.css
+++ b/Site/Presentation/Assets/css/screen_Back.css
@@ -1,4 +1,4 @@
-body { background: #000 no-repeat fixed center center; }
+﻿body { background: #000 no-repeat fixed center center; }
 
 .bg1 { background-image: url("/Assets/images/background/01.jpg"); }
 .bg2 { background-image: url("/Assets/images/background/02.jpg"); }
