--- a/Site/Presentation/Assets/css/Season.css
+++ b/Site/Presentation/Assets/css/Season.css
@@ -13,19 +13,31 @@
 {
     text-decoration: none;
     color: inherit;
-    margin-bottom: 7px;
+    margin-bottom: 5px;
     display: block;
     font-size: 115%;
+	color: #800;
 }
 
 .seasonEpisodeList .epCode
 {
 	font-weight: bold;
+	color: #333;
 }
 
 .seasonEpisodeList .epTitle
 {
 	font-style: italic;
+}
+
+.seasonEpisodeList .epPublish
+{
+	display: block;
+	font-size: 70%;
+	font-weight: bold;
+	text-align: right;
+	margin-top: -10px;
+	color: #555;
 }
 
 .seasonEpisodeList .summary
