--- a/Site/Presentation/Views/Season/Summary.cshtml
+++ b/Site/Presentation/Views/Season/Summary.cshtml
@@ -12,15 +12,18 @@
 <ul class="seasonEpisodeList">
     @foreach (var episode in Model.EpisodeList)
     {
-        <li>
-            <a class="title" href="@Url.RouteUrl("Default", new { action = "Episode", controller = "Season", seasonID = Model.Season, episodeID = episode })">
-                <span class="epCode">@(episode):</span>
-                <span class="epTitle">@episode.Title</span>
-            </a>
-            <p class="summary">
-                @episode.Summary
-            </p>
-        </li>
+	    <li>
+		    <a class="title" href="@Url.RouteUrl("Default", new { action = "Episode", controller = "Season", seasonID = Model.Season, episodeID = episode })">
+			    <span class="epCode">@(episode):</span>
+			    <span class="epTitle">@episode.Title</span>
+			    <span class="epPublish">
+				    Public.: @episode.Publish.ToShortDateString()
+			    </span>
+		    </a>
+		    <p class="summary">
+			    @episode.Summary
+		    </p>
+	    </li>
     }
 </ul>
 
