[SITE] Hiding not published episodes for non authenticated user
by [Dara Keon (Ísis)] in [2015-08-06 14:23:02 (-03:00)]

--- a/Site/Presentation/Views/Shared/Partial/Menu.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Menu.cshtml
@@ -13,7 +13,7 @@
             @Countdown.GetTimeLeft() days
         </div>
         <div class="header lightback">
-            @Html.RouteLink("Add Episode", route, new { action = "AddEpisode" })
+            @Html.RouteLink("Add Episode", route, new { action = "AddEpisode", controller = "Season" })
         </div>
         <br /><br />
     }
