--- a/Site/Presentation/Views/Season/Author/Scene.cshtml
+++ b/Site/Presentation/Views/Season/Author/Scene.cshtml
@@ -12,7 +12,7 @@
 <div class="scene @if(scene.ID == Model.ReadingScene) { @("reading") }" id="Scene@(Model.SceneCounter)">
     
     <div class="goHistory">
-        <a href="#" class="darkback" onclick="SaveCurrentScene(); return false;">Save</a>
+        <a href="#" class="darkback" onclick="SaveCurrentForm(); return false;">Save</a>
 
         @Html.RouteLink("View", "Scene",
             new { seasonID = Model.Story.Season.ID, episodeID = Model.Story.ID, sceneID = scene.ID },
