--- a/Site/Presentation/Assets/css/Season.css
+++ b/Site/Presentation/Assets/css/Season.css
@@ -19,6 +19,11 @@
 	color: #800;
 }
 
+.seasonEpisodeList .title:hover
+{
+	text-decoration: underline;
+}
+
 .seasonEpisodeList .epCode
 {
 	font-weight: bold;
