[SITE] New route
by [Dara Keon (Ísis)] in [2016-11-15 18:24:10 (-02:00)]

--- a/Site/Presentation/Views/Shared/Partial/Menu.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Menu.cshtml
@@ -4,7 +4,7 @@
 @{
     var isAuthor = UrlUserType.IsAuthor(Request.Url);
     
-    var route = isAuthor ? "Author" : "Default";
+    var route = isAuthor ? "Author" : "Short";
 
     if (isAuthor)
     {
