--- a/Site/Presentation/Assets/css/Author/screen_ViewStoryLink.css
+++ b/Site/Presentation/Assets/css/Author/screen_ViewStoryLink.css
@@ -4,8 +4,13 @@
 	margin: -35px 0 20px 0;
 }
 
-.goHistory a
-{
-	text-decoration: none;
-	padding: 4px 11px;
-}
+	.goHistory a
+	{
+		text-decoration: none;
+		padding: 4px 11px;
+	}
+
+	.goHistory .paragraphCountTitle {
+		float: left;
+		
+	}
