--- a/Site/Presentation/Views/Season/Author/Episode.cshtml
+++ b/Site/Presentation/Views/Season/Author/Episode.cshtml
@@ -46,17 +46,19 @@
 
 				@Html.Link("Upload", RouteConfig.Names.Upload, Model.Story.Season.ID, Model.Story.ID, "_", new {@class = "darkback save", target = "_blank"})
 
-				@Html.TextBoxFor(m => m.Story.Title)<br/>
+				@Html.TextBoxFor(m => m.Story.Title)
+
+				<span class="paragraphCountTitle">
+					Paragraphs last count: @Model.Story.SceneList.Sum(s => s.ParagraphTypeList.Count)
+				</span>
+				
+				<br/>
 
 				@Html.TextAreaFor(m => m.Story.Summary)
 			</div>
 		}
 	</div>
 }
-
-<p>
-	Paragraphs last count: @Model.Story.SceneList.Sum(s => s.ParagraphTypeList.Count)
-</p>
 
 
 @Html.Partial("Partial/ChangeScene", topSelector)
