[SITE] scene: fix paragraphs count showing on page

--- a/Site/Presentation/Views/Season/Author/Scene.cshtml
+++ b/Site/Presentation/Views/Season/Author/Scene.cshtml
@@ -13,7 +13,7 @@
 
 	<div class="goHistory">
 		<span class="paragraphCountTitle">
-			Scene Paragraphs Count: @scene.ParagraphTypeList.Count
+			Scene Paragraphs Last Count: @scene.ParagraphCount
 		</span>
 
 		<a href="#" class="darkback" onclick="SaveCurrentForm(); return false;">Save</a>
