--- a/Site/Presentation/Views/Shared/Partial/Js.cshtml
+++ b/Site/Presentation/Views/Shared/Partial/Js.cshtml
@@ -1,18 +1,20 @@
-﻿<script src="@Url.Content("~/Assets/js/lib/jquery-1.6.1.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/jquery.unobtrusive-ajax.min.js")" type="text/javascript"></script>
+﻿@using Version = Structure.Version
 
-<script src="@Url.Content("~/Assets/js/lib/StringExtension.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/NumericValue.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/lib/Scale.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery-1.6.1.min.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery.validate.min.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery.validate.unobtrusive.min.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/jquery.unobtrusive-ajax.min.js")?v=@Version.Name" type="text/javascript"></script>
 
-<script src="@Url.Content("~/Assets/js/AjustBoxes.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/Back.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/Legend.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/Menu.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/SceneChanger.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/FontResizer.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Assets/js/Trigger.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/StringExtension.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/NumericValue.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/lib/Scale.js")?v=@Version.Name" type="text/javascript"></script>
 
-<script src="@Url.Content("~/Assets/js/General.js")" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/AjustBoxes.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Back.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Legend.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Menu.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/SceneChanger.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/FontResizer.js")?v=@Version.Name" type="text/javascript"></script>
+<script src="@Url.Content("~/Assets/js/Trigger.js")?v=@Version.Name" type="text/javascript"></script>
+
+<script src="@Url.Content("~/Assets/js/General.js")?v=@Version.Name" type="text/javascript"></script>
